--- a/pages/19013.html
+++ b/pages/19013.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      dependent type theoretic methods in natural language semantics in nLab
+      Atsushi Tomoda in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      dependent type theoretic methods in natural language semantics
+      Atsushi Tomoda
   </h1>
 
 
@@ -308,140 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a><ul><li><a href='#papers_using_dependent_type_theory'>Papers using dependent type theory</a></li><li><a href='#papers_using_homotopy_type_theory'>Papers using homotopy type theory</a></li><li><a href='#talks'>Talks</a></li></ul></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>A number of researchers are using <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> as a formal tool to understand <a class='existingWikiWord' href='/nlab/show/linguistics'>natural language</a>. Some are using in particular <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>.</p>
-
-<h2 id='related_entries'>Related entries</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/monad+%28in+linguistics%29'>monad (in linguistics)</a></li>
+    <ul>
+<li><a href='http://ton.prosou.nu/official/'>webpage</a></li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<h3 id='papers_using_dependent_type_theory'>Papers using dependent type theory</h3>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_80f7498969b1fd52b1d27f04942fe7dbbc44a53e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p>René Ahn, <em>Agents, Objects and Events: A computational approach to knowledge, observation and communication</em>, Ph.D. dissertation, Eindhoven University, 2001.</p>
+<p><a class='existingWikiWord' href='/nlab/show/splitting+principle'>splitting principle</a></p>
 </li>
 
 <li>
-<p>Asher, N.: Lexical Meaning in Context: A Web of Words. Cambridge University Press (2011)</p>
-</li>
-
-<li>
-<p>Asher, N., Luo, Z.: Formalisation of coercions in lexical semantics. In: Sinn und Bedeutung. vol. 17, pp. 63–80 (2012)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>: Representing anaphora with dependent types. In: Asher, N., Soloviev, S. (eds.) Logical Aspects of Computational Linguistics, Lecture Notes in Computer Science, vol.8535, pp. 14–29 (2014), <a href='http://link.springer.com/chapter/10.1007%2F978-3-662-43742-1_2'>Springer</a>.</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Asher, N.: Logical polysemy and subtyping. In: Motomura, Y., Butler, A., Bekki, D. (eds.) New Frontiers in Artificial Intelligence, Lecture Notes in Computer Science, vol. 7856, pp. 17–24. Springer (2013)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Satoh, M.: Calculating projections via type checking. In: Proceedings of TYTLES (to appear)</p>
-</li>
-
-<li>
-<p>Robin Cooper, Austinian Truth, Attitudes and Type Theory, Research on Language and Computation. July 2005, Volume 3, Issue 2-3, pp 333-362 <a href='http://link.springer.com/article/10.1007%2Fs11168-006-0002-z'>Springer</a></p>
-</li>
-
-<li>
-<p>Chatzikyriakidis, S., Luo, Z.: Natural language inference in Coq. Journal of Logic, Language and Information 23(4), 441–480 (2014)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Zhaohui+Luo'>Zhaohui Luo</a>: Type-theoretical semantics with coercive subtyping. In: Semantics and Linguistic Theory 20 (SALT 20). Vancouver (2010)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Zhaohui+Luo'>Zhaohui Luo</a>: Contextual analysis of word meanings in type-theoretical semantics. In: Pogodalla, S., Prost, J.-P. (eds.) LACL 2011. LNCS, vol. 6736, pp. 159–174. Springer, Heidelberg (2011)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Zhaohui+Luo'>Zhaohui Luo</a>: Common nouns as types. In: Béchet, D., Dikovsky, A. (eds.) LACL 2012. LNCS, vol. 7351, pp. 173–185. Springer, Heidelberg (2012), <a href='http://www.cs.rhul.ac.uk/home/zhaohui/LACL12.pdf'>pdf</a>.</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Zhaohui+Luo'>Zhaohui Luo</a>: Event Semantics with Dependent Types, <a href='http://www.cs.rhul.ac.uk/home/zhaohui/Evt15.pdf'>pdf</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Zhaohui+Luo'>Zhaohui Luo</a>, Formal Semantics in Modern Type Theories: Is It Model-theoretic, Proof-theoretic, or Both?, <a href='http://www.cs.rhul.ac.uk/home/zhaohui/LACL14FINAL.pdf'>pdf</a>.</p>
-</li>
-
-<li>
-<p>Koji Mineshima, A Presuppositional Analysis of Definite Descriptions in Proof Theory, New Frontiers in Artificial Intelligence Lecture Notes in Computer Science Volume 4914, 2008, pp 214-227 <a href='http://link.springer.com/chapter/10.1007%2F978-3-540-78197-4_20'>Springer</a></p>
-</li>
-
-<li>
-<p>P. Piwek and E. Krahmer, ‘Presuppositions in Context: Constructing Bridges’, in Formal Aspects of Context, eds., P. Bonzon, M. Cavalcanti,and R. Nossum, volume 20 of Applied Logic Series, 85–106, Kluwer Academic Publishers, Dordrecht, (2000).</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Aarne+Ranta'>Aarne Ranta</a>, Type-theoretical grammar. Oxford University Press (1994)</p>
-</li>
-
-<li>
-<p>Sundholm, G.: Proof theory and meaning. In: Gabbay, D., Guenthner, F. (eds.) Handbook of Philosophical Logic, vol. 3, pp. 471–506. Springer (1986)</p>
-</li>
-
-<li>
-<p>Tanaka, R., Mineshima, K., Bekki, D.: Resolving modal anaphora in Dependent Type Semantics. In: Proceedings of LENLS11. pp. 43–56 (2014), <a href='http://link.springer.com/chapter/10.1007%2F978-3-662-48119-6_7'>Springer</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/twisted+bundle'>twisted vector bundle</a>, <a class='existingWikiWord' href='/nlab/show/bundle+gerbe+module'>gerbe module</a></p>
 </li>
 </ul>
 
-<h3 id='papers_using_homotopy_type_theory'>Papers using homotopy type theory</h3>
-
-<ul>
-<li>Bahramian, H., Nematollahi, N., Sabry, A.: Copredication in Homotopy Type Theory, <a href='https://www.researchgate.net/publication/320704539_Copredication_in_homotopy_type_theory'>pdf</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/David+Corfield'>David Corfield</a>, <em>Expressing ‘the structure of’ in homotopy type theory</em>, <a href='https://ncatlab.org/davidcorfield/show/Expressing+%27The+Structure+of%27+in+Homotopy+Type+Theory'>webpage</a></li>
-</ul>
-
-<p>A worked example, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> in the <span class='newWikiWord'>Grammatical Framework<a href='/nlab/new/Grammatical+Framework'>?</a></span></p>
-
-<ul>
-<li><a href='http://www.grammaticalframework.org/~aarne/gf-hott/'>GF-HoTT</a>.</li>
-</ul>
-
-<h3 id='talks'>Talks</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Anaphora and Presuppositions in <a class='existingWikiWord' href='/nlab/show/Dependent+Type+Semantics'>Dependent Type Semantics</a> (Theoretical side) <a href='http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/bekki1.pdf'>slides</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Anaphora and Presuppositions in Dependent Type Semantics (Empirical side) <a href='http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/bekki2.pdf'>slides</a></li>
-
-<li>Ribeka Tanaka, Generalized Quantifiers in Dependent Type Semantics <a href='http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/tanaka.pdf'>slides</a></li>
-
-<li>Yusuke Kubota and Robert Levine, Scope parallelism in coordination in Dependent Type Semantics <a href='http://www.u.tsukuba.ac.jp/~kubota.yusuke.fn/kubota-levine.pdf'>slides</a></li>
-</ul>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on February 20, 2018 10:34:04 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.215)
+  Created on February 20, 2018 10:01:18 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.205)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dependent+type+theoretic+methods+in+natural+language+semantics/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Atsushi+Tomoda" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Atsushi+Tomoda" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/dependent+type+theoretic+methods+in+natural+language+semantics" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Atsushi+Tomoda" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/dependent+type+theoretic+methods+in+natural+language+semantics" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Atsushi+Tomoda" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
