--- a/pages/10234.html
+++ b/pages/10234.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -921,6 +921,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infraparticle'>infraparticle</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
@@ -1037,7 +1041,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#spin'>Spin</a></li></ul></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#mass'>Mass</a></li><li><a href='#spin'>Spin</a></li></ul></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A <em>proton</em> is a <a class='existingWikiWord' href='/nlab/show/bound+state'>bound state</a> of three <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, hence a <a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a>.</p>
@@ -1048,6 +1052,14 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
+<h3 id='mass'>Mass</h3>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/proton'>proton</a> has <a class='existingWikiWord' href='/nlab/show/mass'>rest mass</a> about a <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_afdd8cb2e5dc59642b0fdd1c20f2b24d94d57d9b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>proton</mi></msub><mo>≃</mo><mn>0.938</mn><mi>GeV</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  m_{proton} \simeq 0.938 GeV
+  \,.
+
+</annotation></semantics></math></div>
 <h3 id='spin'>Spin</h3>
 
 <p>The contribution of the constituents (<a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, <a class='existingWikiWord' href='/nlab/show/gluon'>gluons</a>) to the total <a class='existingWikiWord' href='/nlab/show/spin'>spin</a> of the proton turns out to be subtle (“proton spin crisis”) <a href='#Thomas08'>Thomas 08</a>.</p>
@@ -1075,6 +1087,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infraparticle'>infraparticle</a></p>
 </li>
 </ul>
 
@@ -1213,14 +1229,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 28, 2017 07:39:57 
+  Revised on February 21, 2018 13:07:04 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (91.230.41.206)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/proton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/proton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/proton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/proton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
